kubernetes/product/product-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: jhipster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
      version: "v1"
  template:
    metadata:
      labels:
        app: product
        version: "v1"
    spec:
      containers:
      - name: product-app
        image: deepu105/product
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
        ports:
        - name: http
          containerPort: 8081
        readinessProbe:
          httpGet:
            path: /product/management/health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 15
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /product/management/health
            port: http
          initialDelaySeconds: 120
