kubernetes/product/product-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-virtualservice
  namespace: jhipster
spec:
  hosts:
  - product
  http:
  - route:
    - destination:
        host: product
        subset: "v1"
      weight: 100
    retries:
      attempts: 3
      perTryTimeout: 2s
